--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   google_fonts: any
   intl: any
   shared_preferences: any
+  url_launcher: any
 
 dev_dependencies:
   flutter_test:
